--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Pretzel Coffee Shop"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="%PUBLIC_URL%/output.css" rel="stylesheet">
-    <title>React App</title>
+    <title>Pretzel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
